[gd_scene load_steps=15 format=2]

[ext_resource path="res://Script/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Script/Control_text.gd" type="Script" id=2]
[ext_resource path="res://Sprits/Fonts/DePixelBreit.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprits/Fonts/alagard.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprits/Seasonal Tilesets/1 - Grassland/Background parts/_Complete_static_BG_(288 x 208).png" type="Texture" id=5]
[ext_resource path="res://Sprits/Chefe.png" type="Texture" id=6]
[ext_resource path="res://Sprits/Guerreiro.png" type="Texture" id=7]
[ext_resource path="res://Sons/Musicas/8-bit-arcade-138828.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.537255 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.811765, 0.227451, 0.14902, 0.239216 )

[sub_resource type="DynamicFont" id=6]
size = 23
font_data = ExtResource( 3 )

[node name="Historia" type="Node2D"]

[node name="bg" type="Sprite" parent="."]
position = Vector2( 990, -745 )
scale = Vector2( 12.9135, 12.9135 )
texture = ExtResource( 5 )

[node name="Dialogue" type="Node" parent="."]
script = ExtResource( 1 )

[node name="1" type="Position2D" parent="."]
position = Vector2( 213, 322 )

[node name="2" type="Position2D" parent="."]
position = Vector2( 839, 225 )

[node name="3" type="Position2D" parent="."]
position = Vector2( 127, 322 )

[node name="Control_text" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Guerreiro" type="Sprite" parent="Control_text"]
position = Vector2( 252, 263 )
scale = Vector2( 4.2, 4.2 )
texture = ExtResource( 7 )

[node name="Chefe" type="Sprite" parent="Control_text"]
position = Vector2( 863, 221 )
scale = Vector2( -4.05977, 4.05977 )
texture = ExtResource( 6 )

[node name="TextBox" type="ColorRect" parent="Control_text"]
margin_top = 369.0
margin_right = 1023.0
margin_bottom = 599.0
color = Color( 0, 0, 0, 0.537255 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control_text/TextBox"]
margin_left = 30.0
margin_top = 28.0
margin_right = 992.0
margin_bottom = 205.0
custom_fonts/normal_font = SubResource( 2 )

[node name="Tween" type="Tween" parent="Control_text/TextBox"]

[node name="Label" type="Label" parent="Control_text/TextBox"]
margin_left = 26.0
margin_top = -55.0
margin_right = 177.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 3 )
text = "NAME"
align = 1
valign = 1

[node name="skip_btn" type="Button" parent="Control_text"]
margin_left = 908.0
margin_top = 538.0
margin_right = 1001.0
margin_bottom = 579.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Skip"

[node name="pass_bnt" type="Button" parent="Control_text"]
margin_left = 34.0
margin_top = 534.0
margin_right = 145.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 6 )
action_mode = 0
text = "Pass"

[node name="music_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
autoplay = true

[connection signal="tween_completed" from="Control_text/TextBox/Tween" to="Control_text" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Control_text/skip_btn" to="Control_text" method="_on_skip_btn_pressed"]
[connection signal="button_down" from="Control_text/pass_bnt" to="Control_text" method="_on_pass_bnt_button_down"]
